capitalise jump links, fixes #176

--- a/assets/static/css/site.css
+++ b/assets/static/css/site.css
@@ -158,3 +158,7 @@ img {
 .bmc-speaker-talk {
   font-style: italic;
 }
+
+#jumps > a {
+  text-transform: capitalize;
+}
